--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
+  <link href="http://fonts.googleapis.com/css?family=Lato:400,300,600" rel="stylesheet" type="text/css">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -35,20 +34,22 @@
   <div class="container"> 
 
       <div class="row"> 
-          <div id="logo" class="twelve columns add-bottom">
-              <h2>Hymer Van 5 For Sale</h2>
-              <img src="images/img_front-large.jpg">
+          <div id="logo" class="twelve columns ">
+              <h1 > Hymer 5 Camping Van For Sale</h1>
+              <img src="images/img_front-large.jpg" class=" u-full-width">
           </div>
       </div>
       <div class="row"> 
           <div class="one-half column ">
               <img src="images/img_back-small.jpg">
               <img src="images/img_bed-small.jpg">
+              <img src="images/img_kitchen-small.jpg">
+              <img src="images/img_drivers_seat-small.jpg">
           </div>
-          <div  class="one-half column">
-              <h3>Details</h3>
+          <div  class="one-half column details ">
+              <h3 > <span class='fa fa-info-circle'> </span> Details</h3>
 
-              <p>        <ul>
+              <ul>
                   <li>LHD French Registered</li>
                   <li>28-3-2008 23000km Ford Transit 130. TDI</li>
                   <li>CT until July 2015</li>
@@ -65,23 +66,27 @@
                       <li>Gas hob </li> 
                       <li>Two single fitted beds - 3rd utility bed. </li> 
                       <li>Scooter ramp </li> 
+                      <li>Cruise control
+                      <li>Awning</li>
+                      <li>Fly screens</li>
+                      <li>Blinds</li>
+                      <li> Curtains</li>
                   </ul>
                   </li>
               </ul>
-              </p> 
+              <hr style='border-top:1px solid black'>
+              <h3 >Contact</h3>
+              <ul>
+                  <li class="fa fa-user"  > Stuart Baker </li><br />
+
+                  <li class="fa fa-phone" > 0652678236 </li> <br /> 
+                  <li class="fa fa-envelope-o" > &#032;&#116;&#114;&#105;&#102;&#105;&#116;&#098;&#097;&#107;&#101;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109; </li>
+              </ul>
           </div>
       </div>
           <div class="row"> 
               <div class="one-half column ">
-                  <img src="images/img_kitchen-small.jpg">
-                  <img src="images/img_drivers_seat-small.jpg">
                   <img src="images/img_bathroom-small.jpg">
-              </div>
-              <div class="one-half column ">
-                  <h3>Contact</h3>
-                  <p>Stuart</p>
-                  <p>Tel</p>
-                  <p>Email</p>
               </div>
           </div>
 
