--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="row"> 
           <div id="logo" class="twelve columns ">
-              <h1 > Hymer 5 Camping Van For Sale</h1>
+              <h1 > Hymer 5 Camping Van For Sale 29500 euros OVNO</h1>
               <img src="images/img_front-large.jpg" class=" u-full-width">
           </div>
       </div>
@@ -50,6 +50,7 @@
               <h3 > <span class='fa fa-info-circle'> </span> Details</h3>
 
               <ul>
+                  <li>Price: 29500 euros OVNO</li>
                   <li>LHD French Registered</li>
                   <li>28-3-2008 23000km Ford Transit 130. TDI</li>
                   <li>CT until July 2015</li>
