euruosign and smaller font:w

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="row"> 
           <div id="logo" class="twelve columns ">
-              <h1 > Hymer 5 Camping Van For Sale 29500 euros OVNO</h1>
+              <h1 > Hymer 5 Camping Van For Sale  -   &euro; 29500  OVNO</h1>
               <img src="images/img_front-large.jpg" class=" u-full-width">
           </div>
       </div>
